membuat bagian body di index.html

--- a/new/index.html
+++ b/new/index.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Css -->
   <link rel="stylesheet" href="style.css">
+  <!-- My fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+  <!-- header -->
   <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -20,6 +26,25 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
-  <section></section>
+
+  <!-- Main -->
+  <section class="main">
+    <div class="container">
+      <p class="star"><i class="fas fa-star"></i>we are<i class="fas fa-star"></i></p>
+        <h1>Team E-07</h1>
+        <p class="job"><i class="fas fa-grip-lines"></i>html & css | Javascript<i class="fas fa-grip-lines"></i></p>
+        <p class="sub">Kominfo<i class="fas fa-star"></i> progate</p>
+        <div class="btn">
+          <a href="#">More Info</a>
+        </div>
+    </div>
+  </section>
+
+<!-- Body -->
+<section class="content">
+  
+</section>
+  
+
 </body>
 </html>
